[package]
name = "bytegame-config-editor"
version = "0.1.0"
edition = "2021"
description = "字节跳动小游戏配置编辑器"
authors = ["Your Name"]

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
rfd = "0.14"

[build-dependencies]
winres = "0.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
