[package]
name = "douyin_config_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
walkdir = "2.4"
anyhow = "1.0"
regex = "1.12.2"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "ico"] }

[build-dependencies]
winres = "0.1"
